# pulsar

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
bundled/macos-aarch64/: ck-client  openvpn
installer/macos/scripts/: postinstall
scripts/: install.sh
src/: app.rs  cli.rs  error.rs  lib.rs  logging.rs  main.rs  output.rs
src/connector/: mod.rs  openvpn_cloak.rs
src/import/: amnezia.rs  manual.rs  mod.rs
src/platform/: mod.rs
src/process/: mod.rs  supervisor.rs
src/profile/: model.rs  store.rs
tests/: integration.rs
tests/fixtures/: amnezia-openvpn-cloak.backup  client.ovpn  cloak.json
