[package]
name = "pulsar"
version = "0.1.0"
edition = "2021"
description = "Lightweight CLI orchestrator for OpenVPN-over-Cloak VPN connections"
license = "MIT"

[lib]
name = "pulsar"
path = "src/lib.rs"

[[bin]]
name = "pulsar"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
dirs = "5"
tempfile = "3"
base64 = "0.22"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"